2014-10-14  Chris Dumez  <cdumez@apple.com>

        Use is<>() / downcast<>() for RenderImage
        https://bugs.webkit.org/show_bug.cgi?id=137683

        Reviewed by Mihnea Ovidenie.

        Use is<>() / downcast<>() for RenderImage.

        * Misc/WebNSPasteboardExtras.mm:
        (imageFromElement):
        (-[NSPasteboard _web_declareAndWriteDragImageForElement:URL:title:archive:source:]):

2014-10-10  Daniel Bates  <dabates@apple.com>

        Remove unused classes WebRender{Node, Layer}
        https://bugs.webkit.org/show_bug.cgi?id=137628

        Reviewed by Simon Fraser.

        We no longer make use of the WebKit1-specific classes WebRenderNode and WebRenderLayer.
        For completeness, there is a WebKit2 analogue of WebRenderLayer by the same name.

        * Configurations/WebKitLegacy.xcconfig: Remove file WebRenderNode.mm from the list
        of excluded source files when building for iOS.
        * WebKit.exp: Remove symbol for WebRenderLayer.
        * WebKit.mac.exp: Remove symbol for WebRenderNode.
        * WebView/WebRenderLayer.h: Removed.
        * WebView/WebRenderLayer.mm: Removed.
        * WebView/WebRenderNode.h: Removed.
        * WebView/WebRenderNode.mm: Removed.

2014-10-10  Chris Dumez  <cdumez@apple.com>

        Use is<>() / downcast<>() for RenderBoxModelObject
        https://bugs.webkit.org/show_bug.cgi?id=137587

        Reviewed by Mihnea Ovidenie.

        Use is<>() / downcast<>() for RenderBoxModelObject and clean up the
        surrounding code.

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView invalidatePluginContentRect:]):
        * WebView/WebRenderLayer.mm:
        (-[WebRenderLayer initWithWebFrame:]):

2014-10-09  Dean Jackson  <dino@apple.com>

        Remove ENABLE_CSS3_CONDITIONAL_RULES
        https://bugs.webkit.org/show_bug.cgi?id=137571

        Reviewed by Simon Fraser.

        * Configurations/FeatureDefines.xcconfig:
