@@ -1,3 +1,14 @@
+2014-10-14  Myles C. Maxfield  <mmaxfield@apple.com>
+
+        Addressing post-review comment.
+        https://bugs.webkit.org/show_bug.cgi?id=137550
+
+        Unreviewed.
+
+        * WebView/WebHTMLView.mm:
+        (fontNameForDescription):
+        (-[WebHTMLView _addToStyle:fontA:fontB:]):
+
 2014-10-14  Chris Dumez  <cdumez@apple.com>
 
         Use is<>() / downcast<>() for RenderImage
